--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "cf-typegen": "wrangler types"
   },
   "dependencies": {
+    "@msgpack/msgpack": "^3.1.3",
+    "bytecodec": "^2.0.0",
     "chanfana": "^2.6.3",
     "hono": "^4.6.20",
+    "zeyra": "^2.1.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "22.13.0",
     "@types/service-worker-mock": "^2.0.4",
-    "wrangler": "^4.54.0"
+    "wrangler": "^4.57.0"
   }
 }
